--- a/conf/zim.yml
+++ b/conf/zim.yml
@@ -389,6 +389,8 @@ rule-providers:
 rules:
     - RULE-SET,去广告,REJECT
     - RULE-SET,reject,REJECT
+    - DOMAIN-SUFFIX,grazie.ai,ChatGPT
+    - DOMAIN-SUFFIX,intellij.net,ChatGPT
     - DOMAIN-SUFFIX,githubusercontent.com,tg
     - DOMAIN-SUFFIX,git.io,tg
     - DOMAIN-KEYWORD,github,tg
