--- a/conf/zim.yml
+++ b/conf/zim.yml
@@ -438,6 +438,7 @@ rules:
     - DOMAIN-KEYWORD,grazie.ai,ChatGPT
     - DOMAIN-KEYWORD,copilot,ChatGPT
     - DOMAIN-KEYWORD,intellij.net,ChatGPT
+    - DOMAIN-SUFFIX,bing.com,ChatGPT
     - DOMAIN-SUFFIX,githubusercontent.com,tg
     - DOMAIN-SUFFIX,git.io,tg
     - DOMAIN-KEYWORD,github,tg
@@ -1298,7 +1299,6 @@ rules:
     - DOMAIN-SUFFIX,awsstatic.com,zim
     - DOMAIN-SUFFIX,azureedge.net,zim
     - DOMAIN-SUFFIX,azurewebsites.net,zim
-    - DOMAIN-SUFFIX,bing.com,zim
     - DOMAIN-SUFFIX,bintray.com,zim
     - DOMAIN-SUFFIX,bit.com,zim
     - DOMAIN-SUFFIX,bit.ly,zim
