部分订阅到期-变更v2

--- a/conf/zim.yml
+++ b/conf/zim.yml
@@ -378,7 +378,7 @@ rules:
     - DOMAIN-KEYWORD,zhile.io,DIRECT
     - DOMAIN-KEYWORD,zhoushuren,DIRECT
     - DOMAIN-KEYWORD,qqe2,DIRECT
-    - DOMAIN-KEYWORD,haituncloud,海豚云
+    - DOMAIN-KEYWORD,haituncloud,zim
     - DOMAIN-KEYWORD,pan123,DIRECT
     - DOMAIN-KEYWORD,evan888,DIRECT
     - DOMAIN-KEYWORD,huangye,DIRECT
