--- a/conf/zim.yml
+++ b/conf/zim.yml
@@ -233,7 +233,7 @@ proxy-groups:
   - name: 自动选择
     type: url-test
     use:
-      - ikuuu
+      - ikuu
       - 十元
     url: http://www.gstatic.com/generate_204
     interval: 300
