--- a/conf/zim.yml
+++ b/conf/zim.yml
@@ -155,7 +155,7 @@ proxies:
 proxy-providers:
   十元:
     type: http
-    url: https://fast.shiyuanyinian.xyz/api/v1/client/subscribe?token=9589fa87a6086adf1c9403d73d8c81b1&flag=clash
+    url: https://shiyuanyinian.passwallwall.world/api/v1/client/subscribe?token=9589fa87a6086adf1c9403d73d8c81b1&flag=clash
     interval: 3600
     health-check:
       enable: true
@@ -164,7 +164,7 @@ proxy-providers:
       url: http://www.gstatic.com/generate_204
   AI_1:
     type: http
-    url: https://fast.shiyuanyinian.xyz/api/v1/client/subscribe?token=9589fa87a6086adf1c9403d73d8c81b1&flag=clash
+    url: https://shiyuanyinian.passwallwall.world/api/v1/client/subscribe?token=9589fa87a6086adf1c9403d73d8c81b1&flag=clash
     filter: 美国|US|纽约
     interval: 3600
     health-check:
@@ -172,9 +172,20 @@ proxy-providers:
       interval: 600
       lazy: true
       url: http://www.gstatic.com/generate_204
+  AI_2:
+    type: http
+    url: https://zhoushuren.cc/api/v1/client/subscribe?token=2b51d16054de17ce488d913aefd2992b&flag=clash
+    filter: 美国|US|纽约|GPT
+    interval: 3600
+    health-check:
+      enable: true
+      interval: 600
+      lazy: true
+      url: http://www.gstatic.com/generate_204
+      
   tg_1:
     type: http
-    url: https://fast.shiyuanyinian.xyz/api/v1/client/subscribe?token=9589fa87a6086adf1c9403d73d8c81b1&flag=clash
+    url: https://shiyuanyinian.passwallwall.world/api/v1/client/subscribe?token=9589fa87a6086adf1c9403d73d8c81b1&flag=clash
     filter: HK|hk|香港|TW|台湾|SG|新加坡|JP|日本|KR|韩国
     interval: 3600
     health-check:
@@ -228,6 +239,7 @@ proxy-groups:
       - ChatGPT专用-004
     use:
       - AI_1
+      - AI_2
     url: http://www.gstatic.com/generate_204
     interval: 300
   - name: 自动选择
