周树人的节点

--- a/conf/zim.yml
+++ b/conf/zim.yml
@@ -174,7 +174,7 @@ proxy-providers:
       url: http://www.gstatic.com/generate_204
   AI_2:
     type: http
-    url: https://zhoushuren.cc/api/v1/client/subscribe?token=2b51d16054de17ce488d913aefd2992b&flag=clash
+    url: https://dy.588511.xyz/api/v1/client/subscribe?token=2b51d16054de17ce488d913aefd2992b&flag=clash
     filter: 美国|US|纽约|GPT
     interval: 3600
     health-check:
@@ -182,7 +182,6 @@ proxy-providers:
       interval: 600
       lazy: true
       url: http://www.gstatic.com/generate_204
-      
   tg_1:
     type: http
     url: https://shiyuanyinian.passwallwall.world/api/v1/client/subscribe?token=9589fa87a6086adf1c9403d73d8c81b1&flag=clash
@@ -202,6 +201,16 @@ proxy-providers:
       interval: 600
       lazy: true
       url: http://www.gstatic.com/generate_204
+  周树人:
+    type: http
+    url: https://dy.588511.xyz/api/v1/client/subscribe?token=2b51d16054de17ce488d913aefd2992b&flag=clash
+    interval: 3600
+    health-check:
+      enable: true
+      interval: 600
+      lazy: true
+      url: http://www.gstatic.com/generate_204
+  
 proxy-groups:
   - name: zim
     type: select
@@ -209,7 +218,7 @@ proxy-groups:
       - 自动选择
       - 十元
       - ikuuu
-      - ChatGPT
+      - 周树人
   - name: ikuuu
     type: select
     use:
@@ -218,6 +227,10 @@ proxy-groups:
     type: select
     use:
       - 十元
+  - name: 周树人
+    type: select
+    use:
+      - 周树人
   - name: tg
     type: url-test
     use:
