--- a/conf/zim.yml
+++ b/conf/zim.yml
@@ -153,18 +153,9 @@ proxies:
           headers:
               Host: wu.yilongdog.top
 proxy-providers:
-  十元:
-    type: http
-    url: https://shiyuanyinian.passwallwall.world/api/v1/client/subscribe?token=9589fa87a6086adf1c9403d73d8c81b1&flag=clash
-    interval: 3600
-    health-check:
-      enable: true
-      interval: 600
-      lazy: true
-      url: http://www.gstatic.com/generate_204
   AI_1:
     type: http
-    url: https://shiyuanyinian.passwallwall.world/api/v1/client/subscribe?token=9589fa87a6086adf1c9403d73d8c81b1&flag=clash
+    url: D:\1.Sys_Tools\Clash\conf\1706681683684.yml
     filter: 美国|US|纽约
     interval: 3600
     health-check:
@@ -173,8 +164,8 @@ proxy-providers:
       lazy: true
       url: http://www.gstatic.com/generate_204
   AI_2:
-    type: http
-    url: https://dy.588511.xyz/api/v1/client/subscribe?token=2b51d16054de17ce488d913aefd2992b&flag=clash
+    type: file
+    path: D:\1.Sys_Tools\Clash\conf\1706681683684.yml
     filter: 美国|US|纽约|GPT
     interval: 3600
     health-check:
@@ -184,7 +175,7 @@ proxy-providers:
       url: http://www.gstatic.com/generate_204
   tg_1:
     type: http
-    url: https://shiyuanyinian.passwallwall.world/api/v1/client/subscribe?token=9589fa87a6086adf1c9403d73d8c81b1&flag=clash
+    url: D:\1.Sys_Tools\Clash\conf\1706681683684.yml
     filter: HK|hk|香港|TW|台湾|SG|新加坡|JP|日本|KR|韩国
     interval: 3600
     health-check:
@@ -202,8 +193,8 @@ proxy-providers:
       lazy: true
       url: http://www.gstatic.com/generate_204
   周树人:
-    type: http
-    url: https://dy.588511.xyz/api/v1/client/subscribe?token=2b51d16054de17ce488d913aefd2992b&flag=clash
+    type: file
+    path: D:\1.Sys_Tools\Clash\conf\1706681683684.yml
     interval: 3600
     health-check:
       enable: true
@@ -216,17 +207,12 @@ proxy-groups:
     type: select
     proxies:
       - 自动选择
-      - 十元
       - ikuuu
       - 周树人
   - name: ikuuu
     type: select
     use:
       - ikuu
-  - name: 十元
-    type: select
-    use:
-      - 十元
   - name: 周树人
     type: select
     use:
@@ -259,7 +245,7 @@ proxy-groups:
     type: url-test
     use:
       - ikuu
-      - 十元
+      - 周树人
     url: http://www.gstatic.com/generate_204
     interval: 300
 rule-providers:
