--- a/conf/zim.yml
+++ b/conf/zim.yml
@@ -210,7 +210,7 @@ proxy-groups:
   - name: tg
     type: url-test
     use:
-      - 自动选择
+      - 周树人
     url: http://www.gstatic.com/generate_204
     interval: 300
   - name: music
